--- a/Develop/assets/css/style.css
+++ b/Develop/assets/css/style.css
@@ -1,3 +1,4 @@
+/* This style applies to entire doc */
 * {
     box-sizing: border-box;
     padding: 0;
@@ -8,6 +9,7 @@ body {
     background-color: #d9dcd6;
 }
 
+/* header section */
 .header {
     padding: 20px;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
@@ -40,6 +42,7 @@ body {
     display: inline-block;
     margin-left: 25px;
 }
+/* Header ends here */
 
 a {
     color: #ffffff;
@@ -87,54 +90,28 @@ p {
 }
 /* adjusted blue color shade in the above */
 
-.benefit-lead {
+.benefits h3 {
     margin-bottom: 32px;
     color: #ffffff;
-}
-
-.benefit-brand {
-    margin-bottom: 32px;
-    color: #ffffff;
-}
-
-.benefit-cost {
-    margin-bottom: 32px;
-    color: #ffffff;
-}
-
-.benefit-lead h3 {
-    margin-bottom: 10px;
     text-align: center;
 }
 
-.benefit-brand h3 {
+.benefits p {
     margin-bottom: 10px;
     text-align: center;
+    color: #ffffff;
 }
 
-.benefit-cost h3 {
-    margin-bottom: 10px;
-    text-align: center;
-}
-
-.benefit-lead img {
+.benefits img {
     display: block;
     margin: 10px auto;
     max-width: 150px;
 }
 
-.benefit-brand img {
-    display: block;
-    margin: 10px auto;
-    max-width: 150px;
-}
+/*  Consolidated "benefits" class and its styling above  */
 
-.benefit-cost img {
-    display: block;
-    margin: 10px auto;
-    max-width: 150px;
-}
 
+/* I tried to consolidate the SEO, Online Reputation Management and Social Media Marketing sections, but I was not successful. Left as is. */
 .search-engine-optimization {
     margin-bottom: 20px;
     padding: 50px;
@@ -169,6 +146,7 @@ p {
     max-height: 200px;
 }
 
+
 .online-reputation-management img {
     max-height: 200px;
 }
@@ -192,13 +170,15 @@ p {
     font-size: 36px;
 }
 
-.footer {
+/* Footer section starts */
+footer {
     padding: 30px;
     clear: both;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     text-align: center;
 }
 
-.footer h2 {
+footer h2 {
     font-size: 20px;
 }
+/* Footer ends  */
